Info and Member Benefits Section

--- a/index.html
+++ b/index.html
@@ -1,58 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fresh Subscription Box</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"/>
-</head>
-<body class="font-sans bg-gray-100">
-    
-    <!-- Navbar -->
-    <nav class="bg-white shadow-lg w-full fixed px-4">
-        <div class="flex justify-between items-center py-4">
-                <h1 class="md:text-lg text-2xl font-bold text-gray-800"><i class="ri-home-4-line mr-1"></i>FreshCrate</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Fresh Food Subscription Box</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link
+            href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+            rel="stylesheet" />
+    </head>
+    <body class="font-sans">
+
+        <!-- Navbar -->
+        <nav class="bg-white shadow-lg w-full fixed px-4">
+            <div class="flex justify-between items-center py-4">
+                <h1 class="md:text-lg text-2xl font-bold text-green-600"><i
+                        class="ri-home-4-line mr-1"></i>FreshCrate</h1>
                 <ul class="hidden md:flex gap-10 md:block">
-                    <li><a href="#" class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Home</a></li>
-                    <li><a href="#" class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Crate</a></li>
-                    <li><a href="#" class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">About</a></li>
-                    <li><a href="#" class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Testimonials</a></li>
-                    <li><a href="#" class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Blog</a></li>
-                    <li><a href="#" class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Contact</a></li>
+                    <li><a href="#"
+                            class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Home</a></li>
+                    <li><a href="#"
+                            class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Crate</a></li>
+                    <li><a href="#"
+                            class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">About</a></li>
+                    <li><a href="#"
+                            class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Testimonials</a></li>
+                    <li><a href="#"
+                            class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Blog</a></li>
+                    <li><a href="#"
+                            class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Contact</a></li>
                 </ul>
                 <div class="flex items-center justify-center gap-5">
                     <i class="ri-search-line text-2xl"></i>
                     <i class="ri-shopping-bag-4-line text-2xl"></i>
-                    <button class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 hidden md:block">Subscribe</button>
+                    <button
+                        class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 hidden md:block">Subscribe</button>
                     <i class="ri-menu-3-line md:hidden text-2xl"></i>
                 </div>
             </div>
-    </nav>
+        </nav>
 
-    <!-- Hero Section -->
-    <section class="bg-white py-12 min-h-screen">
-        <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-center px-4 mt-20">
-            <div class="md:w-1/2">
-                <h1 class="text-6xl text-gray-600">Eat Fresh. <span class="font-bold text-gray-800">Be Healthy!</span></h1>
-                <p class="mt-6 text-gray-600 text-lg">Get Your Vegetables Weekly & Monthly Box!</p>
-                <ul class="mt-4 space-y-2 text-gray-600">
-                    <li><i class="ri-check-line text-green-600 text-xl"></i> 100% Satisfaction Guarantee</li>
-                    <li><i class="ri-check-line text-green-600 text-xl"></i> World-Class Products</li>
-                </ul>
-                <div class="mt-10">
-                    <a href="#" class="px-6 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 mr-4">Fresh Boxes</a>
-                    <a href="#" class="px-6 py-3 bg-gray-800 text-white rounded-lg hover:bg-gray-900">Join Now</a>
+        <!-- Hero Section -->
+        <section class="bg-white py-12 min-h-screen">
+            <div
+                class="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-center px-4 mt-20">
+                <div class="md:w-1/2">
+                    <h1 class="text-6xl text-gray-600">Eat Fresh. <span
+                            class="font-bold text-gray-800">Be
+                            Healthy!</span></h1>
+                    <p class="mt-6 text-gray-600 text-lg">Get Your Vegetables
+                        Weekly & Monthly Box!</p>
+                    <ul class="mt-4 space-y-2 text-gray-600">
+                        <li><i class="ri-check-line text-green-600 text-xl"></i>
+                            100% Satisfaction Guarantee</li>
+                        <li><i class="ri-check-line text-green-600 text-xl"></i>
+                            World-Class Products</li>
+                    </ul>
+                    <div class="mt-10">
+                        <a href="#"
+                            class="px-6 py-3 bg-green-600 text-white rounded-lg hover:bg-green-700 mr-4">Fresh
+                            Boxes</a>
+                        <a href="#"
+                            class="px-6 py-3 bg-gray-800 text-white rounded-lg hover:bg-gray-900">Join
+                            Now</a>
+                    </div>
+                </div>
+                <div class="md:w-1/2 mt-8 md:mt-0">
+                    <img
+                        src="https://i.pinimg.com/736x/03/5c/72/035c72b9e706f7805aa817d3fa92b0a5.jpg"
+                        alt="Fresh Vegetables"
+                        class="rounded-lg shadow-lg h-[75vh] w-[35vw] mx-auto ">
                 </div>
             </div>
-            <div class="md:w-1/2 mt-8 md:mt-0">
-                <img src="https://i.pinimg.com/736x/03/5c/72/035c72b9e706f7805aa817d3fa92b0a5.jpg" alt="Fresh Vegetables" class="rounded-lg shadow-lg h-[75vh] w-[35vw] mx-auto ">
+        </section>
+
+        <!-- Info Section -->
+        <section class="container mx-auto px-6 py-12 min-h-screen">
+            <h2 class="text-center text-4xl text-gray-600 mb-4">Weekly, Monthly
+                <span class="text-gray-800 font-bold">Food Crates</span></h2>
+            <h4 class="text-center text-lg text-gray-600 mb-8">Our Fresh food
+                gets deliver in just one day.</h4>
+            <div class="grid md:grid-cols-3 items-center gap-1 px-20">
+                <!-- Left Section -->
+                <div class="text-right">
+                    <ul>
+                        <li class="mb-8">
+                            <h3 class="font-bold text-lg">10 Fresh
+                                Vegetables</h3>
+                            <p class="text-gray-600">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Numquam sit
+                                tempore quibusdam ipsam, eligendi unde explicabo
+                                commodi odit non veritatis! Culpa quis
+                                distinctio,</p>
+                        </li>
+                        <li class="mb-8">
+                            <h3 class="font-bold text-lg">Monthly
+                                Subscription</h3>
+                            <p class="text-gray-600">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Numquam sit
+                                tempore quibusdam ipsam, eligendi unde explicabo
+                                commodi odit non veritatis! Culpa quis
+                                distinctio,</p>
+                        </li>
+                        <li class="mb-5">
+                            <h3 class="font-bold text-lg">5kg Total Weight</h3>
+                            <p class="text-gray-600">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Numquam sit
+                                tempore quibusdam ipsam, eligendi unde explicabo
+                                commodi odit non veritatis! Culpa quis
+                                distinctio,</p>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Mid Section  -->
+                <div>
+                    <img
+                        src="https://i.pinimg.com/564x/88/4f/ac/884fac3735267e2baf4198608623cc10.jpg"
+                        alt="mid-image"
+                        class="h-[60vh] w-[22vw] object-cover mx-auto">
+                </div>
+
+                <!-- Right Section -->
+                <div>
+                    <ul>
+                        <li class="mb-8">
+                            <h3 class="font-bold text-lg">Daily Fresh
+                                Deliveries</h3>
+                            <p class="text-gray-600">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Numquam sit
+                                tempore quibusdam ipsam, eligendi unde explicabo
+                                commodi odit non veritatis! Culpa quis
+                                distinctio,</p>
+                        </li>
+                        <li class="mb-8">
+                            <h3 class="font-bold text-lg">Available On Your
+                                Town</h3>
+                            <p class="text-gray-600">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Numquam sit
+                                tempore quibusdam ipsam, eligendi unde explicabo
+                                commodi odit non veritatis! Culpa quis
+                                distinctio,</p>
+                        </li>
+                        <li class="mb-5">
+                            <h3 class="font-bold text-lg">See What's Inside</h3>
+                            <p class="text-gray-600">Lorem ipsum dolor sit amet
+                                consectetur adipisicing elit. Numquam sit
+                                tempore quibusdam ipsam, eligendi unde explicabo
+                                commodi odit non veritatis! Culpa quis
+                                distinctio,</p>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-   
+        <!-- Member Benefits Section -->
+        <section class="bg-white shadow-lg py-8 min-h-screen">
+            <div class="container mx-auto px-24">
+                <div class="grid md:grid-cols-2 items-center justify-center">
+                    <img
+                        src="https://i.pinimg.com/564x/ba/ed/28/baed288ceed7f57872c4bcb1c236d265.jpg"
+                        alt="Crate"
+                        class="h-[60vh] w-[25vw] mx-auto rounded-lg">
+                    <div class="text-center md:text-left">
+                        <h3 class="font-bold text-3xl mb-4">TheCrate's <span
+                                class="text-green-700">Member
+                                Benefits</span></h3>
+                        <ul class="mb-4 space-y-1">
+                            <li class="flex items-center text-md"><i
+                                    class="ri-check-line text-green-600 text-xl"></i>
+                                100% Satisfaction Guarantee</li>
+                            <li class="flex items-center text-md"><i
+                                    class="ri-check-line text-green-600 text-xl"></i>
+                                Stay Up-To-Date Through Newsletter</li>
+                            <li class="flex items-center text-md"><i
+                                    class="ri-check-line text-green-600 text-xl"></i>
+                                Member Pricing Discounts</li>
+                            <li class="flex items-center text-md"><i
+                                    class="ri-check-line text-green-600 text-xl"></i>
+                                Award-Winning Crate Community</li>
+                            <li class="flex items-center text-md"><i
+                                    class="ri-check-line text-green-600 text-xl"></i>
+                                100% Satisfaction Guarantee</li>
+                            <li class="flex items-center text-md"><i
+                                    class="ri-check-line text-green-600 text-xl"></i>
+                                Stay Up-To-Date Through Newsletter</li>
+                            <li class="flex items-center text-md"><i
+                                    class="ri-check-line text-green-600 text-xl"></i>
+                                Member Pricing Discounts</li>
+                        </ul>
+                        <button
+                            class="bg-black hover:bg-gray-800 transition-all text-white px-4 py-2 rounded">Join
+                            Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-</body>
+    </body>
 </html>
