Box, Post and Footer Section

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                 </div>
             </div>
         </section>
-
+ 
         <!-- Member Benefits Section -->
-        <section class="bg-white shadow-lg py-8 min-h-screen">
+        <section class="bg-white py-8">
             <div class="container mx-auto px-24">
                 <div class="grid md:grid-cols-2 items-center justify-center">
                     <img
@@ -197,6 +197,134 @@
                 </div>
             </div>
         </section>
+
+        <!-- Get Box Section  -->
+        <section class="container mx-auto p-6 min-h-screen mt-16">
+            <h1 class="text-4xl text-center text-gray-600 mb-3">Get Products
+                <span class="font-bold text-gray-800"> Box
+                    Separately</span></h1>
+            <p class="text-center text-lg mb-8">Subscribe to our month
+                crates</p>
+            <!-- cards -->
+            <div class="flex justify-center gap-10">
+
+                <div
+                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center md:relative">
+                    <img src="https://i.pinimg.com/enabled_hi/564x/c5/aa/f8/c5aaf836b5afb15e73b0a6050ebe594b.jpg" alt="Monthly Box"
+                        class="h-[25vh] w-[15vw] mb-4">
+                    <h2 class="text-xl font-bold mb-2">$29/month</h2>
+                    <ul class="mb-4 text-center">
+                        <li>Re-bills every month</li>
+                        <li>Cancel Anytime</li>
+                        <li>Get Free Shipping</li>
+                    </ul>
+                    <button
+                        class="bg-gray-800 hover:bg-black transition-all text-white py-2 px-4 rounded md:absolute -bottom-5">SELECT
+                        BOX</button>
+                </div>
+
+                <div
+                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center md:relative">
+                    <img src="https://i.pinimg.com/564x/6f/1e/48/6f1e48b86a8313d7ba58e1d6fd0f73b0.jpg" alt="Monthly Box"
+                        class="h-[25vh] w-[15vw] mb-4">
+                    <h2 class="text-xl font-bold mb-2">$25/month</h2>
+                    <ul class="mb-4 text-center">
+                        <li>Re-bills every month</li>
+                        <li>Cancel Anytime</li>
+                        <li>Get Free Shipping</li>
+                    </ul>
+                    <button
+                        class="bg-gray-800 hover:bg-black transition-all text-white py-2 px-4 rounded md:absolute -bottom-5">SELECT
+                        BOX</button>
+                </div>
+
+                <div
+                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center md:relative">
+                    <img src="https://i.pinimg.com/564x/09/0d/ef/090deff3e638645bff9b9368643297d1.jpg" alt="Monthly Box"
+                        class="h-[25vh] w-[15vw] mb-4">
+                    <h2 class="text-xl font-bold mb-2">$19/month</h2>
+                    <ul class="mb-4 text-center">
+                        <li>Re-bills every month</li>
+                        <li>Cancel Anytime</li>
+                        <li>Get Free Shipping</li>
+                    </ul>
+                    <button
+                        class="bg-gray-800 hover:bg-black transition-all text-white py-2 px-4 rounded md:absolute -bottom-5">SELECT
+                        BOX</button>
+                </div>
+
+            </div>
+            <p class="text-center mt-10">Plan automatically renewed after
+                committing to the length of the plan.</p>
+        </section>
+
+        <!-- Posts Section  -->
+        <section class="mb-12 min-h-screen">
+                <h2 class="text-4xl text-gray-800 font-bold text-center mb-20"><span class="text-green-600">Fresh Posts</span> From <span class="text-green-600">The Garden</span></h2>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-10 px-32">
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <img src="https://i.pinimg.com/564x/7d/18/8f/7d188f684146e8d670835ea521591d71.jpg" alt="Post Image" class="w-full h-48 object-cover rounded mb-4">
+                        <h3 class="text-xl font-bold mb-2">Open Up the Box, New Vegetables</h3>
+                        <p class="text-gray-700 mb-2">October 10, 2021 - Fresh Crates</p>
+                        <p class="mb-4">Explore our newest vegetables straight from the garden.</p>
+                        <a href="#" class="text-green-600 hover:underline">Read More</a>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <img src="https://i.pinimg.com/564x/99/a3/13/99a313f2038a4a07411a15211b8d3cdb.jpg" alt="Post Image" class="w-full h-48 object-cover object-bottom-center rounded mb-4">
+                        <h3 class="text-xl font-bold mb-2">Build Your Own Fresh Monthly Box</h3>
+                        <p class="text-gray-700 mb-2">October 10, 2021 - Fresh Crates</p>
+                        <p class="mb-4">Customize your monthly box with fresh choices of your favourite.</p>
+                        <a href="#" class="text-green-600 hover:underline">Read More</a>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg shadow">
+                        <img src="https://i.pinimg.com/564x/ea/40/eb/ea40ebd1eb3ec1d06be23ecbded98e1b.jpg" alt="Post Image" class="w-full h-48 object-cover object-bottom rounded mb-4">
+                        <h3 class="text-xl font-bold mb-2">Fresh Crates are Coming to Town</h3>
+                        <p class="text-gray-700 mb-2">October 10, 2021 - Fresh Crates</p>
+                        <p class="mb-4">Find out when our fresh crates will be available in your town.</p>
+                        <a href="#" class="text-green-600 hover:underline">Read More</a>
+                    </div>
+                </div>
+            </section>
+        
+        <!-- Footer Section  -->
+        <footer class="bg-gray-800 text-white p-6">
+            <div class="flex justify-between">
+                <div>
+                    <h3 class="text-lg font-bold">TheCrate</h3>
+                    <p class="text-gray-400">Bringing fresh produce to your doorstep.</p>
+                    <div class="flex space-x-4 mt-4">
+                        <a href="#" class="text-white hover:text-green-400">Facebook</a>
+                        <a href="#" class="text-white hover:text-green-400">Twitter</a>
+                        <a href="#" class="text-white hover:text-green-400">Instagram</a>
+                    </div>
+                </div>
+                <div>
+                    <h4 class="text-lg font-bold">Quick Links</h4>
+                    <ul class="mt-2 space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white">Home</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">About Us</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Contact</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-lg font-bold">Subscription</h4>
+                    <ul class="mt-2 space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white">Subscribe</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Pricing</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Plans</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-lg font-bold">Information</h4>
+                    <ul class="mt-2 space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white">FAQ</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Terms</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white">Privacy</a></li>
+                    </ul>
+                </div>
+            </div>
+            <p class="mt-6 text-center text-gray-400">&copy; 2024 TheCrate Blog. All rights reserved.</p>
+        </footer>
 
     </body>
 </html>
