--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <body class="font-sans">
 
         <!-- Navbar -->
-        <nav class="bg-white shadow-lg w-full fixed px-4">
+        <nav class="bg-white shadow-lg w-full fixed px-4 z-40">
             <div class="flex justify-between items-center py-4">
                 <h1 class="md:text-lg text-2xl font-bold text-green-600"><i
                         class="ri-home-4-line mr-1"></i>FreshCrate</h1>
@@ -31,8 +31,8 @@
                             class="text-gray-800 font-semibold text-md hover:text-green-600 transition-all">Contact</a></li>
                 </ul>
                 <div class="flex items-center justify-center gap-5">
-                    <i class="ri-search-line text-2xl"></i>
-                    <i class="ri-shopping-bag-4-line text-2xl"></i>
+                    <i class="ri-search-line text-2xl hover:text-green-600 transition-all"></i>
+                    <i class="ri-shopping-bag-4-line text-2xl hover:text-green-600 transition-all"></i>
                     <button
                         class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 hidden md:block">Subscribe</button>
                     <i class="ri-menu-3-line md:hidden text-2xl"></i>
@@ -205,11 +205,11 @@
                     Separately</span></h1>
             <p class="text-center text-lg mb-8">Subscribe to our month
                 crates</p>
-            <!-- cards -->
-            <div class="flex justify-center gap-10">
+
+            <div class="flex justify-center gap-10 ">
 
                 <div
-                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center md:relative">
+                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center relative z-9">
                     <img src="https://i.pinimg.com/enabled_hi/564x/c5/aa/f8/c5aaf836b5afb15e73b0a6050ebe594b.jpg" alt="Monthly Box"
                         class="h-[25vh] w-[15vw] mb-4">
                     <h2 class="text-xl font-bold mb-2">$29/month</h2>
@@ -224,7 +224,7 @@
                 </div>
 
                 <div
-                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center md:relative">
+                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center relative z-9">
                     <img src="https://i.pinimg.com/564x/6f/1e/48/6f1e48b86a8313d7ba58e1d6fd0f73b0.jpg" alt="Monthly Box"
                         class="h-[25vh] w-[15vw] mb-4">
                     <h2 class="text-xl font-bold mb-2">$25/month</h2>
@@ -239,7 +239,7 @@
                 </div>
 
                 <div
-                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center md:relative">
+                    class="bg-white p-6 w-72 h-96  border-2 border-gray-400 flex flex-col items-center relative z-9">
                     <img src="https://i.pinimg.com/564x/09/0d/ef/090deff3e638645bff9b9368643297d1.jpg" alt="Monthly Box"
                         class="h-[25vh] w-[15vw] mb-4">
                     <h2 class="text-xl font-bold mb-2">$19/month</h2>
